--- a/styles/base.css
+++ b/styles/base.css
@@ -1,12 +1,13 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
 }
 
-h1,
 h2,
 footer {
     color: #D5F2E3;
@@ -19,36 +20,95 @@ header {
     color: #D5F2E3;
 }
 
-header,
-main,
-footer {
-    margin: 1rem 2vw;
-    border: 1px solid #bbb;
-    padding: 1rem;
+#mode {
+    position: absolute;
+    right: 2.5rem;
+    top: 3.5rem;
+    cursor: pointer;
+    width: 25px;
+    box-shadow: none;
+    background-color: #D5F2E3;
+    border-radius: 4px;
+
 }
 
-h1 {
-    color: black;
+.darkMode {
+    background: #222222;
+    color: #fff;
+}
+
+.darkMode h1 {
+    color: white;
+}
+
+.darkMode section {
+    background-color: white;
+}
+
+.darkMode p,
+.darkMode li {
+    color: #000;
+}
+
+#menu {
+    display: block;
+    font-size: 2rem;
+    color: #D5F2E3;
+    background: none;
+    border: 0;
+    text-decoration: none;
+    padding: .5rem 2vw;
+}
+
+#menu::before {
+    content: '≡';
 }
 
 nav {
     background-color: #01110A;
-    text-align: center;
-    padding: .5rem;
 }
 
-nav a {
+.navigation {
+    list-style: none;
+}
+
+.navigation li {
+    display: none;
+}
+
+.navigation a {
     color: #D5F2E3;
-    padding: .5rem;
+    padding: 1rem;
     display: block;
+    transition: 0.5s;
+    text-decoration: none;
 }
 
-nav a:hover {
+.navigation a:hover {
     background-color: rgba(255, 255, 255, 0.3);
 }
 
-nav .active {
+.navigation .active {
     background-color: #BA2D0B;
+}
+
+.show li {
+    display: block;
+}
+
+#menu.show::before {
+    content: 'x';
+}
+
+header,
+main,
+footer {
+    border: 1px solid #000;
+}
+
+h1 {
+    color: black;
+    padding: 1.5rem;
 }
 
 section h2 {
@@ -58,13 +118,18 @@ section h2 {
 
 section {
     border: 1px solid black;
-    margin: 1rem auto;
+    margin: 1rem 2vw;
     border-radius: 5px;
-
+    overflow: hidden;
 }
 
 section p {
-    padding: 10px;
+    padding: 1.5rem;
+}
+
+section li {
+    padding: 1rem;
+    list-style: none;
 }
 
 footer {
