--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,13 +1,14 @@
 @media screen and (min-width: 640px) {
     * {
         box-sizing: border-box;
+        margin: 0;
+        padding: 0;
     }
 
     body {
         font-family: 'Roboto', sans-serif;
     }
 
-    h1,
     h2,
     footer {
         color: #D5F2E3;
@@ -24,13 +25,7 @@
 
     header img {
         box-shadow: 1px 1px 10px black;
-    }
-
-    header,
-    main,
-    footer {
-        border: 1px solid #bbb;
-        padding: 1rem;
+        margin-right: 1rem;
     }
 
     h1 {
@@ -38,25 +33,22 @@
         grid-column: 1/3;
     }
 
-    nav {
-        background-color: #01110A;
-        text-align: center;
+    #menu {
+        display: none;
+    }
+
+    .navigation {
         padding: .5rem;
         display: flex;
     }
 
-    nav a {
-        color: #D5F2E3;
-        padding: .5rem;
+    .navigation li {
+        display: block;
         flex: 1 1 100%;
     }
 
-    nav a:hover {
-        background-color: rgba(255, 255, 255, 0.3);
-    }
-
-    nav .active {
-        background-color: #BA2D0B;
+    .navigation a {
+        text-align: center;
     }
 
     section h2 {
@@ -68,6 +60,10 @@
         border: 1px solid black;
         border-radius: 5px;
         box-shadow: 1px 1px 10px black;
+    }
+
+    section li {
+        margin-right: 1rem;
     }
 
     main {
