--- a/week01/styles/chamber-site-plan.css
+++ b/week01/styles/chamber-site-plan.css
@@ -49,7 +49,7 @@ section {
 #typography,
 #scenarios,
 #wireframe,
-#colorScheme,
+#colorSchema,
 #siteName {
     border: 1px solid black;
     padding: 1.5rem;
