--- a/styles/base.css
+++ b/styles/base.css
@@ -33,7 +33,7 @@ header {
 }
 
 .darkMode {
-    background: #222222;
+    background: #1d1d1d;
     color: #fff;
 }
 
@@ -42,12 +42,12 @@ header {
 }
 
 .darkMode section {
-    background-color: white;
+    background-color: #3d3d3d;
 }
 
 .darkMode p,
 .darkMode li {
-    color: #000;
+    color: white;
 }
 
 #menu {
@@ -136,4 +136,8 @@ footer {
     text-align: center;
     background-color: #003E1F;
 
+}
+
+.darkMode a:visited {
+    color: rgba(127, 251, 255, 0.842);
 }
