--- a/styles/larger.css
+++ b/styles/larger.css
@@ -3,6 +3,7 @@
         box-sizing: border-box;
         margin: 0;
         padding: 0;
+        max-width: 1200px;
     }
 
     body {
@@ -68,11 +69,15 @@
 
     main {
         display: grid;
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 70% 30%;
     }
 
     section p {
         padding: 10px;
+    }
+
+    iframe {
+        grid-column: 1/3;
     }
 
     footer {
