--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,20 @@
+:root {
+    --heading-color-font: #D5F2E3;
+    --primary-color-font: #000;
+    --darkmode-primary-color-font: #fff;
+    --darkmode-heading-color-font: #000;
+    --accent1-color: #003E1F;
+    --accent2-color: #01110A;
+
+    --heading-font: "Poetsen One", sans-serif;
+    --paragraph-font: 'Roboto', sans-serif;
+
+    --nav-background-color: #01110A;
+    --nav-link-color: #D5F2E3;
+    --nav-hover-link-color: #003E1F;
+    --nav-hover-background-color: rgba(255, 255, 255, 0.3);
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,19 +22,19 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--paragraph-font);
 }
 
 h2,
 footer {
-    color: #D5F2E3;
+    color: var(--heading-color-font);
     padding: 1rem;
 }
 
 header {
-    background-color: #003E1F;
+    background-color: var(--accent1-color);
     padding: 1rem;
-    color: #D5F2E3;
+    color: var(--heading-color-font);
 }
 
 #mode {
@@ -33,11 +50,11 @@ header {
 
 .darkMode {
     background: #1d1d1d;
-    color: #fff;
+    color: var(--darkmode-primary-color-font);
 }
 
 .darkMode h1 {
-    color: white;
+    color: var(--darkmode-primary-color-font);
 }
 
 .darkMode section {
@@ -47,12 +64,12 @@ header {
 .darkMode p,
 .darkMode li,
 .darkMode a {
-    color: white;
+    color: var(--darkmode-primary-color-font);
 }
 
 .darkMode a:visited:hover,
 .darkMode a:hover {
-    color: #D5F2E3;
+    color: var(--nav-link-color);
 }
 
 .darkMode a:visited {
@@ -78,7 +95,7 @@ main a:visited {
 }
 
 nav {
-    background-color: #01110A;
+    background-color: var(--nav-background-color);
 }
 
 .navigation {
@@ -90,7 +107,7 @@ nav {
 }
 
 .navigation a {
-    color: #D5F2E3;
+    color: var(--nav-link-color);
     padding: 1rem;
     display: block;
     transition: 0.5s;
@@ -133,7 +150,7 @@ nav {
 }
 
 .herolabel p {
-    color: #000;
+    color: var(--primary-color-font);
 }
 
 header,
@@ -143,13 +160,15 @@ footer {
 }
 
 h1 {
-    color: black;
+    color: var(--primary-color-font);
     padding: 1.5rem;
+    font-family: var(--heading-font);
 }
 
 section h2 {
-    background-color: #003E1F;
+    background-color: var(--accent1-color);
     margin: 0;
+    font-family: var(--heading-font);
 }
 
 section {
@@ -159,13 +178,13 @@ section {
     overflow: hidden;
 }
 
-a {
-    color: #01110A;
+.card a {
+    color: var(--accent2-color);
 }
 
 a:visited:hover,
 a:hover {
-    color: #003E1F;
+    color: var(--accent1-color);
 }
 
 section p {
@@ -186,6 +205,6 @@ iframe {
 
 footer {
     text-align: center;
-    background-color: #003E1F;
+    background-color: var(--accent1-color);
 
 }
