W04: Project Milestone - The Chamber Join Page

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -215,3 +215,92 @@ figure {
     width: 400px;
     height: auto;
 }
+
+/*----------- FORM STYLING --------------*/
+.webForm fieldset {
+    margin: 1.5rem;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: .5rem 2%;
+}
+
+.webForm h1 {
+    margin-left: 1.5rem;
+}
+
+.webForm label {
+    display: block;
+    padding-top: 1rem;
+    color: var(--primary-color);
+    font-size: .9rem;
+}
+
+label strong {
+    color: #BA2D0B;
+}
+
+.webForm input[type="text"],
+.webForm select,
+.webForm input[type="email"],
+.webForm input[type="tel"] {
+    background-color: #eee;
+    display: block;
+    border: solid 1px #999;
+    border-radius: 6px;
+    padding: .9rem;
+    color: #555;
+    width: 100%;
+    max-width: 450px;
+    appearance: none;
+}
+
+.webForm input[type="submit"] {
+    border: none;
+    background-image: linear-gradient(#9c2c13, #6f200e);
+    color: #fff;
+    border-radius: 6px;
+    padding: .9rem;
+    width: 95%;
+    max-width: 450px;
+    margin: -.5rem 0 2rem 5%;
+    box-shadow: 1px 1px 4px #999;
+}
+
+/*----------- TABLE STYLING --------------*/
+table {
+    text-align: center;
+    border: 1px solid #666666;
+    border-collapse: collapse;
+    margin: auto .5rem;
+}
+
+caption {
+    caption-side: bottom;
+    font-size: .90rem;
+    padding: .5rem;
+}
+
+td,
+th {
+    border: 1px solid #666666;
+    padding: 1.5rem 1rem;
+}
+
+th {
+    font-family: var(--heading-font);
+    background-color: var(--accent1-color);
+}
+
+td ul {
+    margin-left: 1.5rem;
+}
+
+tr:nth-child(even) {
+    background-color: #eeeeee;
+}
+
+/*----------- THANKS HTML --------------*/
+.thankyou {
+    display: block;
+    padding: 1.5rem;
+}
