--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -114,4 +114,11 @@
     .sidebar section {
         margin-bottom: 2rem;
     }
+
+    /*----------- TABLE STYLING --------------*/
+    .join {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 1fr;
+    }
 }
