--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -305,3 +305,49 @@ tr:nth-child(even) {
     display: block;
     padding: 1.5rem;
 }
+
+/*----------- DIRECTORY STYLING --------------*/
+#displayMode {
+    background-color: var(--accent2-color);
+    display: flex;
+    justify-content: space-around;
+    padding: .5rem;
+}
+
+#displayMode img {
+    padding: .5rem;
+    border: 1px solid #000;
+    border-radius: 5px;
+    background-color: var(--nav-background-color);
+    box-shadow: 0 0 .2rem #000;
+}
+
+#displayMode img:hover {
+    box-shadow: none;
+    background-color: var(--accent1-color);
+}
+
+#displayCompanies section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#displayCompanies img {
+    width: 225px;
+}
+
+/*-------List Mode--------*/
+.list img {
+    display: none;
+}
+
+.list section:nth-child(odd) {
+    background-color: #dcfff9;
+}
+
+.list#displayCompanies section {
+    align-items: normal;
+    text-align: left;
+}
