--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -117,8 +117,22 @@
 
     /*----------- TABLE STYLING --------------*/
     .join {
-        display: grid;
         grid-template-columns: 50% 50%;
         grid-template-rows: 1fr;
+    }
+
+    /*----------- DIRECTORY STYLING --------------*/
+    #directory {
+        display: block;
+    }
+
+    .grid#displayCompanies {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    }
+
+    .list#displayCompanies section {
+        display: flex;
+        align-items: baseline;
     }
 }
