--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -126,9 +126,13 @@
         display: block;
     }
 
-    .grid#displayCompanies {
+    #displayCompanies {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    }
+
+    .list#displayCompanies {
+        display: block;
     }
 
     .list#displayCompanies section {
