--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -102,7 +102,7 @@ nav {
     color: var(--primary-color);
 }
 
-.navigation .active {
+.navigation:active {
     background-color: var(--secondary-color);
     color: white;
 }
@@ -180,10 +180,6 @@ section {
 }
 
 .highlight {
-    text-align: center;
-}
-
-.weather p {
     text-align: center;
 }
 
@@ -350,4 +346,48 @@ tr:nth-child(even) {
 .list#displayCompanies section {
     align-items: normal;
     text-align: left;
+}
+
+/*-------Weather Style--------*/
+.weatherDisplay div {
+    display: flex;
+    align-items: center;
+}
+
+/*-------Banner Style--------*/
+#banner {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#banner img {
+    height: 200px;
+    width: auto;
+}
+
+#banner p {
+    background-color: #86deb7;
+    font-size: 2rem;
+    padding: 4rem 7rem;
+    text-align: center;
+}
+
+.exit#banner {
+    display: none;
+}
+
+#close {
+    position: absolute;
+    right: 2.5rem;
+    bottom: -21rem;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    box-shadow: none;
+    background-color: #eee;
+    border-radius: 4px;
+    border: 1px solid #000;
+    font-size: 1.3rem;
 }
