--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -56,10 +56,10 @@
         left: 25rem;
     }
 
-    main {
+    #home {
         display: grid;
         grid-template-columns: 2fr 1fr;
-        grid-template-rows: 3fr 2fr 3fr;
+        grid-template-rows: 2fr 2fr 3fr 2fr;
     }
 
     .hero {
@@ -82,8 +82,14 @@
         grid-column: 1/3;
     }
 
+    #banner {
+        grid-column: 1/3;
+        align-items: center;
+    }
+
     .highlight div {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         justify-content: center;
     }
 
