W06: Chamber Project - Home Page Enhancements

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -59,7 +59,7 @@ header {
 #signUp {
     grid-column: 4/5;
     grid-row: 2/3;
-    height: 25px;
+    height: 44px;
     width: 50px;
     font-size: .8rem;
 }
@@ -67,7 +67,7 @@ header {
 #signIn {
     grid-column: 3/4;
     grid-row: 2/3;
-    height: 25px;
+    height: 44px;
     width: 50px;
     font-size: .8rem;
 }
@@ -132,6 +132,10 @@ nav {
     grid-column: 4/5;
     grid-row: 1/2;
     font-size: .8rem;
+}
+
+.contactUs button {
+    height: 44px;
 }
 
 .contactUs.show {
@@ -384,11 +388,13 @@ tr:nth-child(even) {
     right: 2.5rem;
     bottom: -21rem;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
+    width: 44px;
+    height: 44px;
+    text-align: center;
     box-shadow: none;
     background-color: #eee;
     border-radius: 4px;
     border: 1px solid #000;
     font-size: 1.3rem;
+    text-decoration: none;
 }
