W06: Chamber Project - Home Page Enhancements

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -123,6 +123,7 @@
 
     /*----------- TABLE STYLING --------------*/
     .join {
+        display: grid;
         grid-template-columns: 50% 50%;
         grid-template-rows: 1fr;
     }
